feat: API para enviar e apagar fotos de uma visita
